- make the opacity control affects the eraser painting operation

BUG:146986

svn path=/trunk/koffice/; revision=677934